--- a/package.json
+++ b/package.json
@@ -21,5 +21,12 @@
   "bugs": {
     "url": "https://github.com/jesseokeya/Pentahacks_Finance/issues"
   },
-  "homepage": "https://github.com/jesseokeya/Pentahacks_Finance#readme"
+  "homepage": "https://github.com/jesseokeya/Pentahacks_Finance#readme",
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "mongoose": "^5.3.12",
+    "morgan": "^1.9.1"
+  }
 }
